# object-query

./: .gitignore  README.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt  generated_common.h  global_include.h  utils.cc  utils.h
src/common/test/: CMakeLists.txt  generated_common_test.cc  test_commons.h
src/example/: CMakeLists.txt  common_test.py  example1.json  example1.proto  generated_query1.cc  generated_query2.cc  generated_query3.cc  generated_query4.cc  generated_query5.cc  generated_query6.cc  generated_query7.cc  generated_query8.cc  golden1.out  golden3.out  golden4.out  golden7.out  golden8.out  json_example_utils.h  json_generated_query1.cc  json_generated_query2.cc  json_generated_query3.cc  json_generated_query4.cc  json_generated_query5.cc  json_generated_query6.cc  json_generated_query7.cc  json_golden1.out  json_golden2.out  json_golden3.out  json_golden4.out  json_golden5.out  json_golden7.out  pb_generated_query1.cc  pb_generated_query5.cc  pb_generated_query8.cc  proto_example1_utils.h  proto_example_utils.h  proto_generated_query1.cc  proto_generated_query2.cc  proto_generated_query3.cc  proto_generated_query4.cc  (+9 more)
src/json-query/: CMakeLists.txt  json_generated_common.h  json_query_engine.cc  json_query_engine.h
src/json-query/test/: CMakeLists.txt  json_generated_common_test.cc
src/main/: CMakeLists.txt  run_query.cc
src/protobuf-query/: CMakeLists.txt  README.md  generated_common.h  global_include.h  protobuf_generated_common.h  protobuf_query_engine.cc  protobuf_query_engine.h  query_engine.cc  query_engine.h
src/protobuf-query/engine/: BISON_FLEX_README  BISON_README  CMakeLists.txt  generated_common.h  query_engine.cc  query_engine.h  select_parts.h  select_query.cc  select_query.h  sql.ll  sql.yy  utils.h
src/protobuf-query/engine/test/: CMakeLists.txt  generated_common_test.cc  select_query_test.cc  test_commons.h
src/protobuf-query/engine/yy/: sql.lex.cc  sql.output  sql.tab.cc  sql.tab.hh  sql.yy
src/protobuf-query/example/: CMakeLists.txt  common_test.py  common_test.sh  example1.json  example1_utils.h  generated_query.cc  generated_query1.cc  generated_query2.cc  generated_query3.cc  generated_query4.cc  generated_query5.cc  generated_query6.cc  generated_query7.cc  generated_query8.cc  golden1.out  golden2.out  golden3.out  golden4.out  golden5.out  golden7.out  golden8.out  proto_spec.txt  run_query.cc  test1.sh  test2.sh  test3.sh  test4.sh  test5.sh  test6.sh  test7.sh  test8.sh
src/protobuf-query/example_protos/: CMakeLists.txt  example1.proto
src/protobuf-query/main/: CMakeLists.txt  run_query.cc
src/protobuf-query/test/: CMakeLists.txt  generated_common_test.cc  protobuf_generated_common_test.cc
src/sql/: CMakeLists.txt  query_tree.h  query_tree.hpp  select_parts.h  select_query.cc  select_query.h  sql.ll  sql.yy
src/sql/test/: CMakeLists.txt  select_query_test.cc
src/sql/yy/: location.hh  position.hh  sql.lex.cc  sql.tab.cc  sql.tab.hh  stack.hh
